# flutter_desktop_cef_web

./: .gitignore  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: MainFlutterWindow.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp  win32_window.cpp
lib/: cef_widget.dart  flutter_desktop_cef_web.dart
macos/: flutter_desktop_cef_web.podspec
macos/Classes/: FlutterDesktopCefWebPlugin.swift
test/: flutter_desktop_cef_web_test.dart
windows/: CMakeLists.txt  flutter_desktop_cef_web_plugin.cpp
windows/cef/: CMakeLists.txt  README.txt
windows/cef/Debug/: cef_sandbox.lib
windows/cef/Release/: cef_sandbox.lib  libcef_dll_wrapper.lib
windows/cef/Resources/: chrome_100_percent.pak  chrome_200_percent.pak
windows/cef/Resources/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
windows/cef/cmake/: cef_variables.cmake
windows/cef/include/: cef_pack_strings.h
windows/cef/tests/cefclient/resources/win/: cefclient.rc
windows/cef/tests/cefsimple/: simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h
windows/core/: cefsimple_win.cc  client_app.cc  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  simple_handler_win.cc
windows/core/renderer/: client_app_renderer.h  client_renderer.cc
windows/include/flutter_desktop_cef_web/: flutter_desktop_cef_web_plugin.h
